--- a/.github/workflows/action-pin.yaml
+++ b/.github/workflows/action-pin.yaml
@@ -14,3 +14,6 @@ jobs:
 
       - name: Ensure SHA pinned actions
         uses: zgosalvez/github-actions-ensure-sha-pinned-actions@0901cf7b71c7ea6261ec69a3dc2bd3f9264f893e # v3.0.12
+        with:
+          allowlist: |
+            slsa-framework/slsa-github-generator
